cleanup; new config files for later usage